<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/login_activity_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activity_login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_login_icon"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />
            <EditText
                android:id="@+id/company_name_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_edit_text"
                android:hint="@string/company_name"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/light_black"
                android:textSize="22sp" />

            <EditText

                android:id="@+id/employee_id_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_edit_text"
                android:hint="@string/employee_id"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/light_black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/passcode_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/light_black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner_register_button"
                android:clickable="true"
                android:textAllCaps="false"
                android:onClick="registerClick"
                android:text="@string/register"
                android:textColor="@color/background"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

